# AR_app

./: Cargo.toml  README.md  TUNEL_3_COMPLETADO.md  TUNNEL_2_FINAL.md  test_rapido.rs
ALGEBRA_ROSE_V27/CORE/: Cargo.toml
APP_FRONTEND/: Cargo.toml
APP_FRONTEND/src/: main.rs
CORE/: Cargo.toml
CORE/src/: algebra_griess.rs  fibonacci_dimensions.rs  fix_active_fields_test.rs  keygen_evolution.rs  keygen_evolution.rs.backup  keygen_evolution.rs.backup_final  keygen_evolution_tests_fixed.rs  lib.rs  love_operator.rs  matrix_444.rs  phi_constants.rs
INTERFACE/: Cargo.toml
INTERFACE/src/: lib.rs  main.rs
