[package]
name = "algebra_rose_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra_rose_core = { path = "../CORE" }
nalgebra = "0.32"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
