[package]
name = "algebra_rose_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra_rose_core = { path = "../CORE" }

# Usar dependencias del workspace
nalgebra.workspace = true
tokio.workspace = true
clap.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
